--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet" href="css/records.css">
     <link rel="stylesheet" href="css/modal.css">
-    <script src="main.js" defer></script>
+    <script src="/js/main.js" defer></script>
     <title>CRUD</title>
 </head>
 <body>
@@ -65,18 +65,20 @@
         <div class="modal" id="modal">
             <div class="modal-content">
                 <header class="modal-header">
+
+                    
                     <h2>Novo Cliente</h2>
                     <span class="modal-close" id="modalClose">&#10006;</span>
                 </header>
-                <form class="modal-form">
-                    <input type="text" class="modal-field" placeholder="Nome do Cliente">
-                    <input type="email" class="modal-field" placeholder="e-mail do Cliente">
-                    <input type="text" class="modal-field" placeholder="Celular do Cliente">
-                    <input type="text" class="modal-field" placeholder="Cidade do Cliente">
+                <form id="form" class="modal-form">
+                    <input type="text" class="modal-field" id="nome" placeholder="Nome do Cliente" required>
+                    <input type="email" class="modal-field" id="email" placeholder="e-mail do Cliente" required>
+                    <input type="text" class="modal-field" id="celular" placeholder="Celular do Cliente" required>
+                    <input type="text" class="modal-field" id="cidade" placeholder="Cidade do Cliente" required>
                 </form>
                 <footer class="modal-footer">
-                    <button class="button green">Salvar</button>
-                    <button class="button blue">Cancelar</button>
+                    <button class="button green" id="salvar">Salvar</button>
+                    <button class="button blue" id="cancelar">Cancelar</button>
                 </footer>
             </div>
         </div>
