--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1 class="header-title">Cadastro de Clientes</h1>
+        <h1 class="header-title">Cadastro De funcionarios</h1>
     </header>
     <main>
         <button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar Cliente</button>
@@ -84,7 +84,7 @@
         </div>
     </main>
     <footer>
-        Copyright &copy; Prof. Fernando Leonid
+ 
     </footer>
 </body>
 </html>
